--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     },
     "dependencies": {
         "dotenv": "^16.0.3",
-        "express": "^4.18.2"
+        "express": "^4.18.2",
+        "mysql2": "^3.12.0"
     },
     "devDependencies": {
         "nodemon": "^3.0.0"
